--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,6 @@ streamlit>=1.44.1
 python-docx>=0.8.11
 PyPDF2
 rich>=14.0.0
-en_core_web_lg
+spacy
+https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl
+
